# taha2

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  lint-clang-format.sh  package-lock.cmake  script.js  sonar-project.properties  test.txt  test_select.sh
EInk/: ApplicationWindow.qml  Button.qml  ButtonSizeSpec.qml  ButtonSpec.qml  CMakeLists.txt  EInk.qml  Icon.qml
budget-app/budget-byte/: CMakeLists.txt
budget-app/budget-byte/include/budget-byte/: Ledger.h
budget-app/budget-byte/src/budget-byte/: Ledger.cpp
budget-app/fin/: CMakeLists.txt
budget-app/fin/include/fin/: Ledger.h  Server.h
budget-app/fin/src/fin/: Ledger.cpp  Server.cpp
budget-app/ledger/: CMakeLists.txt
budget-app/ledger/include/ledger/: Ledger.h
budget-app/ledger/src/ledger/: Ledger.cpp
compiler-construction/minijava/: CMakeLists.txt
compiler-construction/minijava/include/minijava/: AST.h  ASTPrinter.h  Error.h  Parser.h  Scanner.h  Token.h  Unit.h
compiler-construction/minijava/src/minijava/: Parser.cpp  Scanner.cpp  Unit.cpp  main.cpp
compiler-construction/minijava/tests/parse-expr/: add-mul.minijava.out  add.minijava.out  array-length.minijava.out  array-lookup.minijava  array-lookup.minijava.out  call.minijava  call.minijava.out  id.minijava.out  int.minijava.out  new-array.minijava  new-array.minijava.out  new-object.minijava  new-object.minijava.out  not.minijava.out  paren.minijava  paren.minijava.out  sub.minijava.out
compiler-construction/minijava/tests/scan/: sample-error.minijava.out  sample.minijava.out
core/: CMakeLists.txt
core/include/core/: Allocator.h  Array.h  Assert.h  Base64.h  Buffer.h  CUtils.h  Chan.h  ConditionVariable.h  EventLoop.h  EventLoop2.h  EventThread.h  ExecutionQueue.h  FastLeak.h  File.h  Func.h  Hash.h  HashFunction.h  IPCMutex.h  Intrinsics.h  Lock.h  Log.h  Mallocator.h  MemoryStream.h  Msgpack.h  Mutex.h  NotificationQueue.h  OSStr.h  OSString.h  Path.h  Queue.h  Rand.h  ReactorLoop.h  Result.h  Rune.h  SHA1.h  Shared.h  Socket.h  Span.h  Stream.h  String.h  (+11 more)
core/include/core/websocket/: Client.h  Client2.h  Client3.h  FrameParser.h  Handshake.h  Message.h  MessageParser.h  Server.h  Server2.h  Server3.h  Websocket.h  XXServer.h
core/src/core/: Assert.cpp  Base64.cpp  Buffer.cpp  FastLeak.cpp  File.cpp  Mallocator.cpp  MemoryStream.cpp  Msgpack.cpp  Rune.cpp  SHA1.cpp  String.cpp  StringView.cpp  ThreadPool.cpp  UUID.cpp  Url.cpp
core/src/core/linux/: ConditionVariable.cpp  EventLoop.cpp  EventLoop2.cpp  EventThread.cpp  File.cpp  IPCMutex.cpp  Intrinsics.cpp  Mutex.cpp  OSString.cpp  Path.cpp  Rand.cpp  Socket.cpp  Thread.cpp  UUID.cpp  VirtualMem.cpp
core/src/core/macos/: ConditionVariable.cpp  File.cpp  IMutex.h  IPCMutex.cpp  Mutex.cpp  OSString.cpp  Path.mm  Rand.cpp  Socket.cpp  Thread.cpp  UUID.cpp  VirtualMem.cpp
core/src/core/websocket/: Client.cpp  Client2.cpp  Client3.cpp  FrameParser.cpp  Handshake.cpp  Internal.h  MessageParser.cpp  Server.cpp  Server2.cpp  Server3.cpp  XXServer.cpp
core/src/core/winos/: ConditionVariable.cpp  EventLoop.cpp  EventLoop2.cpp  EventThread.cpp  File.cpp  IMutex.h  Intrinsics.cpp  Mutex.cpp  OS.cpp  OSStr.cpp  OSString.cpp  Path.cpp  Rand.cpp  ReactorLoop.cpp  Socket.cpp  Thread.cpp  UUID.cpp  VirtualMem.cpp  Websocket.cpp
examples/: CMakeLists.txt  clear-window.cpp  echo-server.cpp  multi-threaded-echo-server.cpp  ping-pong.cpp  playground.cpp  select.cpp  single-threaded-echo-server.cpp  thread-per-client-echo-server.cpp  threaded-echo-server.cpp  threaded-event-loop-echo-server.cpp  window.cpp  ws-client.cpp  ws-client2.cpp  ws-client3.cpp  ws-server.cpp  ws-server2.cpp
examples/golang-tcp-echo-bench/: main.go
examples/golang-tcp-echo-server/: main.go
examples/golang-websocket-client/: client.go  go.mod
examples/golang-websocket-server/: server.go
fin/: CMakeLists.txt
fin-gui/: CMakeLists.txt  Main.qml
fin-gui/src/fin-gui/: main.cpp
fin/include/fin/: Ledger.h  Server.h
fin/src/fin/: Server.cpp
infrastructure/core/: CMakeLists.txt
infrastructure/core/include/core/: Allocator.h  Arena.h  Array.h  Assert.h  Base64.h  Buffer.h  BufferedReader.h  CUtils.h  Chan.h  ConditionVariable.h  EventLoop.h  ExecutionQueue.h  FastLeak.h  File.h  Func.h  Hash.h  HashFunction.h  IPCMutex.h  Intrinsics.h  Lock.h  Log.h  Mallocator.h  MemoryStream.h  MiMallocator.h  Mimallocator.h  Msgpack.h  Mutex.h  NotificationQueue.h  OS.h  OSString.h  Path.h  Queue.h  Rand.h  Result.h  Rune.h  SHA1.h  Shared.h  Socket.h  Span.h  Stacktrace.h  (+10 more)
infrastructure/core/src/core/: Arena.cpp  Assert.cpp  Base64.cpp  Buffer.cpp  FastLeak.cpp  File.cpp  Mallocator.cpp  MemoryStream.cpp  MiMallocator.cpp  Mimallocator.cpp  Msgpack.cpp  Rune.cpp  SHA1.cpp  (+5 more)
infrastructure/examples/: CMakeLists.txt  playground.cpp  select.cpp  thread-per-client-echo-server.cpp  ws-client.cpp  ws-server.cpp
infrastructure/examples/golang-tcp-echo-bench/: main.go
infrastructure/examples/golang-tcp-echo-server/: main.go
infrastructure/examples/golang-websocket-client/: client.go
infrastructure/examples/golang-websocket-server/: server.go
renderer/examples/: CMakeLists.txt  bench-model-transform.cpp  clear-window.cpp  vulkan-tutorial.cpp  window.cpp
renderer/taha/: CMakeLists.txt
sabre/: CMakeLists.txt
sabre/include/sabre/: Dummy.h  Token.h  Unit.h
sabre/src/sabre/: Dummy.cpp  Unit.cpp
taha/: CMakeLists.txt
taha/include/taha/: Command.h  DX11Renderer.h  Encoder.h  Engine.h  Frame.h  NativeWindowDesc.h  Renderer.h
taha/src/taha/: DX11Renderer.cpp  Encoder.cpp  Engine.cpp
test/: CMakeLists.txt  test_allocator.cpp  test_array.cpp  test_buffer.cpp  test_file.cpp  test_func.cpp  test_hash.cpp  test_intrinsics.cpp  test_log.cpp  test_memorystream.cpp  test_msgpack.cpp  test_os.cpp  test_osstr.cpp  test_osstring.cpp  test_path.cpp  test_queue.cpp  test_rune.cpp  test_sha1.cpp  test_shared.cpp  test_string.cpp  test_thread.cpp  test_threadpool.cpp  test_unique.cpp  test_url.cpp  test_uuid.cpp  test_vec.cpp  test_vector.cpp
test/autobahn-testsuite/config/: fuzzingclient.json  fuzzingserver.json
(+165 files in other folders)
